--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,12 @@
 .buildlog/
 .history
 .svn/
-migrate_working_dir/
+*.g.dart
+*.freezed.dart
+*.gr.dart
+*.config.dart
+.fvm/flutter_sdk
+.vscode/
 
 # IntelliJ related
 *.iml
